# HDRViewer

./: CMakeLists.txt  README.md
src/: ColorPipeline.cpp  ColorPipeline.h  HDRDisplay.cpp  HDRDisplay.h  ImageDecoder.cpp  ImageDecoder.h  MainWindow.cpp  MainWindow.h  RegistrySetup.cpp  RegistrySetup.h  Renderer.cpp  Renderer.h  Resource.rc  SlideShow.cpp  SlideShow.h  app.manifest  main.cpp
